# chat-app

./: .env  .gitignore  main.py  pyproject.toml
src/api/: auth.py  healthcheck.py
src/core/: config.py
src/dao/: db.py
src/dto/: user.py
src/service/: oauth2.py
src/utils/: constants.py
