[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["jayranpariya <jayranapriya04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
fastapi-camelcase = "^2.0.0"
pydantic = "^2.8.2"
motor = "^3.5.1"
asyncio = "^3.4.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
